Segundo Avance: Esqueleto avanzado
